--- a/MyApp/Views/Items/Edit.cshtml
+++ b/MyApp/Views/Items/Edit.cshtml
@@ -16,6 +16,10 @@
            <input type="number" class="form-control" asp-for="Price" />
        </div>
     <div class="form-group">
+        <label for="SerialNumber">Serial No.</label>
+        <input type="text" class="form-control" asp-for="SerialNumber" />
+    </div>
+    <div class="form-group">
         <label for="CategoryId">Category</label>
         <select asp-for="CategoryId" asp-items="ViewBag.Categories" class="form-control"></select>
     </div>
