Fixed Edit option

--- a/MyApp/Views/Home/Index.cshtml
+++ b/MyApp/Views/Home/Index.cshtml
@@ -3,6 +3,15 @@
 }
 
 <div class="text-center">
+
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <a asp-controller="Items" asp-action="Index" class="btn btn-success mt-3">View Products</a>
+
+
+    <a asp-controller="Items" asp-action="Create" class="btn btn-success mt-3">Add Product</a>
+
+
+
+
 </div>
