--- a/MyApp/Views/Items/Create.cshtml
+++ b/MyApp/Views/Items/Create.cshtml
@@ -20,6 +20,11 @@
         <label for="CategoryId">Category</label>
    <select asp-for="CategoryId" asp-items="ViewBag.Categories" class="form-control"></select>  
 </div>
+
+    <div class="form-group">
+        <label for="SerialNumber">Serial Number</label>
+        <input type="text" name="serialNumberName" class="form-control" value="@Model?.SerialNumber?.Name" />
+    </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 
 
