--- a/MyApp/Views/Items/Index.cshtml
+++ b/MyApp/Views/Items/Index.cshtml
@@ -10,7 +10,7 @@
            <th>Price</th>
            <th>Serial No.</th>
             <th>Category</th>
-            <th>Clients</th>
+           @*  <th>Clients</th> *@
        </tr>
     </thead>
     <tbody>
@@ -21,14 +21,14 @@
                 <td>$@item.Price.ToString("N2")</td>
                 <td>@item.SerialNumber?.Name</td>
                 <td>@item.Category?.Name</td>
-                <td>
+                @* <td>
                     @foreach(var client in item.ItemClients)
                     {
                         @client.Client.Name
                     }
 
 
-                </td>
+                </td> *@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
